--- a/vegastrike.config
+++ b/vegastrike.config
@@ -4,6 +4,7 @@
  		<bind key="space" modifier="none" command="FireKey" />
  		<bind key="y" modifier="none" command="MatchSpeedKey" />
  		<bind key="j" modifier="none" command="JumpKey" />
+ 		<bind key="a" modifier="none" command="AutoKey" />
  		<bind key="c" modifier="none" command="CloakKey" />
  		<bind key="return" modifier="none" command="MissileKey" />
 		<bind key="g" modifier="none" command="WeapSelKey"/>
@@ -54,8 +55,8 @@
                 <bind key="T" modifier="none" command="Cockpit::SwitchRVDU"/>
                 <bind key="w" modifier="none" command="Cockpit::PitchDown"/>
                 <bind key="z" modifier="none" command="Cockpit::PitchUp"/>
-                <bind key="a" modifier="none" command="Cockpit::YawLeft"/>
-                <bind key="s" modifier="none" command="Cockpit::YawRight"/>
+                <bind key="s" modifier="none" command="Cockpit::YawLeft"/>
+                <bind key="d" modifier="none" command="Cockpit::YawRight"/>
                 <bind key="cursor-pagedown" modifier="none" command="Cockpit::ScrollDown"/>
                 <bind key="cursor-pageup" modifier="none" command="Cockpit::ScrollUp"/>
 
