--- a/vegastrike.config
+++ b/vegastrike.config
@@ -10,6 +10,7 @@
 		<bind key="g" modifier="none" command="WeapSelKey"/>
 		<bind key="m" modifier="none" command="MisSelKey"/>
 		<bind key="t" modifier="none" command="TargetKey" />
+		<bind key="p" modifier="none" command="PickTargetKey" />
 		<bind key="n" modifier="none" command="NearestTargetKey" />
 		<bind key="h" modifier="none" command="ThreatTargetKey" />
                 <bind key="`" modifier="none" command="SheltonKey" />
@@ -275,7 +276,7 @@
 
 		</section>
 		<section name="interpreter">
-			<var name="debuglevel" value="2"/>
+			<var name="debuglevel" value="0"/>
 			<var name="startgame"  value="true"/>
 		</section>
 		<section name="player">
