--- a/vegastrike.config
+++ b/vegastrike.config
@@ -269,6 +269,7 @@
 			      Zero means shields do not work in nebulae -->
 			<var name="nebula_shield_recharge" value=".5"/>
 			<!-- the next variable tells how accurately systems shoudl be simulated where the player isn't in.   Really you don't need much accuracy -->
+			<var name="YearScale" value="10"/>
 			<var name="InactiveSystemTime" value=".2"/>
 			<var name="AfterburnerFuelUsage" value="10"/>
 			<var name="NoFuelThrust" value=".9"/>
