added ability ot generate star systems

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -162,6 +162,7 @@
         </colors>
 	<variables>
 		<section name="data">
+			<var name="universe_path" value="universe"/>
 			<var name="sharedtextures" value="textures"/>
 			<var name="sharedsounds" value="sounds"/>
 		</section>
@@ -253,6 +254,7 @@
 		<section name="general">
 			<var name="simulation_atom" value="0.076"/>
 			<var name="default_mission" value="test2.mission"/>
+			<var name="galaxy" value="milky_way.xml"/>
         	</section>
 		<section name="AI">
 			<section name="Targetting">
