modified some trivial files

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -182,6 +182,7 @@
 			<var name="jumpgate" value="warp.ani"/>
 
 			<var name="LogoOffset" value="-4"/>
+			<var name="fog" value="false"/>
 			<var name="fogdetail" value="2"/>
 			<var name="LogoOffsetScale" value="-30.8"/>
 			<var name="HaloOffset" value=".5"/>
