--- a/vegastrike.config
+++ b/vegastrike.config
@@ -277,7 +277,7 @@
 			<var name="AfterburnerFuelUsage" value="10"/>
 			<var name="NoFuelThrust" value=".9"/>
 			<var name="NoFuelAfterburn" value=".1"/>
-
+			<var name="Drone" value="unknown_active"/>
 		</section>
 		<section name="interpreter">
 			<var name="debuglevel" value="0"/>
