--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -256,6 +256,9 @@
 			<var name="simulation_atom" value="0.076"/>
 			<var name="default_mission" value="test2.mission"/>
 			<var name="galaxy" value="milky_way.xml"/>
+			<var name="garbagecollectfrequency" value="2001"/>
+			<var name="numrunningsystems" value="4"/>
+
         	</section>
 		<section name="AI">
 			<section name="Targetting">
