--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -256,8 +256,9 @@
 			<var name="simulation_atom" value="0.076"/>
 			<var name="default_mission" value="test2.mission"/>
 			<var name="galaxy" value="milky_way.xml"/>
-			<var name="garbagecollectfrequency" value="2001"/>
-			<var name="numrunningsystems" value="4"/>
+			<var name="garbagecollectfrequency" value="20"/>
+			<var name="numoldsystems" value="6"/>
+			<var name="deleteoldsystems" value="true"/>
 
         	</section>
 		<section name="AI">
@@ -276,7 +277,8 @@
 			<var name="nebula_shield_recharge" value=".5"/>
 			<!-- the next variable tells how accurately systems shoudl be simulated where the player isn't in.   Really you don't need much accuracy -->
 			<var name="YearScale" value="10"/>
-			<var name="InactiveSystemTime" value=".2"/>
+			<var name="NumRunningSystems" value="1"/>
+			<var name="InactiveSystemTime" value=".3"/>
 			<var name="AfterburnerFuelUsage" value="10"/>
 			<var name="NoFuelThrust" value=".9"/>
 			<var name="NoFuelAfterburn" value=".1"/>
