--- a/vegastrike.config
+++ b/vegastrike.config
@@ -4,7 +4,7 @@
  		<bind key="space" modifier="none" command="FireKey" />
  		<bind key="y" modifier="none" command="MatchSpeedKey" />
  		<bind key="j" modifier="none" command="JumpKey" />
- 		<bind key="a" modifier="none" command="AutoKey" />
+ 		<bind key="A" modifier="none" command="AutoKey" />
  		<bind key="c" modifier="none" command="CloakKey" />
  		<bind key="return" modifier="none" command="MissileKey" />
 		<bind key="g" modifier="none" command="WeapSelKey"/>
@@ -13,6 +13,10 @@
 		<bind key="p" modifier="none" command="PickTargetKey" />
 		<bind key="n" modifier="none" command="NearestTargetKey" />
 		<bind key="h" modifier="none" command="ThreatTargetKey" />
+		<bind key="T" modifier="none" command="TurretTargetKey" />
+		<bind key="P" modifier="none" command="PickTurretTargetKey" />
+		<bind key="N" modifier="none" command="NearestTurretTargetKey" />
+		<bind key="H" modifier="none" command="ThreatTurretTargetKey" />
                 <bind key="`" modifier="none" command="SheltonKey" />
                 <bind key="-" modifier="none" command="DecelKey"/>
                 <bind key="+" modifier="none" command="AccelKey" />
@@ -52,11 +56,11 @@
                 <bind key="function-11" modifier="none" command="Cockpit::ZoomIn"/>
                 <bind key="function-12" modifier="none" command="Cockpit::ZoomOut"/>
 
-                <bind key="W" modifier="none" command="Cockpit::SwitchLVDU"/>
-                <bind key="T" modifier="none" command="Cockpit::SwitchRVDU"/>
-                <bind key="w" modifier="none" command="Cockpit::PitchDown"/>
+                <bind key="w" modifier="none" command="Cockpit::SwitchLVDU"/>
+                <bind key="v" modifier="none" command="Cockpit::SwitchRVDU"/>
+                <bind key="q" modifier="none" command="Cockpit::PitchDown"/>
                 <bind key="z" modifier="none" command="Cockpit::PitchUp"/>
-                <bind key="s" modifier="none" command="Cockpit::YawLeft"/>
+                <bind key="a" modifier="none" command="Cockpit::YawLeft"/>
                 <bind key="d" modifier="none" command="Cockpit::YawRight"/>
                 <bind key="cursor-pagedown" modifier="none" command="Cockpit::ScrollDown"/>
                 <bind key="cursor-pageup" modifier="none" command="Cockpit::ScrollUp"/>
@@ -215,8 +219,8 @@
 			<var name="separatespecularcolor" value="true"/>
 			<var name="numlights"	value="4"/>
 			<section name="hud" >
-				<var name="drawAllTargetBoxes" value="true" />
-				<var name="drawAlwaysITTS" value="true" />
+				<var name="drawAllTargetBoxes" value="false" />
+				<var name="drawAlwaysITTS" value="false" />
 				<var name="radarType" value="WC" />
 				<var name="drawLineToTarget" value="false" />
 				<var name="drawLineToTargetsTarget" value="false" />
