--- a/vegastrike.config
+++ b/vegastrike.config
@@ -222,6 +222,7 @@
 				<var name="drawAllTargetBoxes" value="false" />
 				<var name="drawAlwaysITTS" value="false" />
 				<var name="radarType" value="WC" />
+				<var name="radarRange" value="20000" />
 				<var name="drawLineToTarget" value="false" />
 				<var name="drawLineToTargetsTarget" value="false" />
 				<var name="drawLineToITTS" value="false" />
