--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -186,14 +186,14 @@
 			<var name="jumpgate" value="warp.ani"/>
 
 			<var name="LogoOffset" value="-4"/>
-			<var name="fog" value="false"/>
+			<var name="fog" value="true"/>
 			<var name="fogdetail" value="2"/>
 			<var name="LogoOffsetScale" value="-30.8"/>
 			<var name="HaloOffset" value=".5"/>
 			<var name="OptimizeVertexArrays" value="false"/>
 			<var name="OptimizeVertexCondition" value="1.0"/>
 			<var name="LockVertexArrays" value="true"/>
-			<var name="SharedVertexArrays" value="false"/>
+			<var name="SharedVertexArrays" value="true"/>
 			<var name="MouseCursor" value="false"/>
 			<var name="ModelDetail" value="1"/>
 			<var name="x_resolution" value="800"/>
@@ -203,7 +203,7 @@
 			<var name="reflection" value="true"/>
 			<var name="fullscreen" value="false"/>
 			<var name="colordepth" value="32"/>
-			<var name="displaylists" value="true"/>
+			<var name="displaylists" value="false"/>
                 	<var name="fov" value="60.0"/>
                 	<var name="aspect" value="1.3"/>
                 	<var name="znear" value="1.0"/>
