added lots of missions

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -186,7 +186,7 @@
 			<var name="jumpgate" value="warp.ani"/>
 
 			<var name="LogoOffset" value="-4"/>
-			<var name="fog" value="true"/>
+			<var name="fog" value="false"/>
 			<var name="fogdetail" value="2"/>
 			<var name="LogoOffsetScale" value="-30.8"/>
 			<var name="HaloOffset" value=".5"/>
@@ -236,14 +236,14 @@
 			<var name="MaxSingleSounds" value="8"/>
 			<var name="MaxTotalSounds" value="24"/>
 			<var name="frequency" value="22050"/>
-			<var name="Sound" value="false"/>
+			<var name="Sound" value="true"/>
 			<var name="Music" value="false"/>
 			<var name="battleplaylist" value="battle.m3u"/>
 			<var name="peaceplaylist" value="peace.m3u"/>
 			<var name="panicplaylist" value="panic.m3u"/>
 			<var name="threadtime" value="2000"/>	
 
-			<var name="Volume"	value="1"/>
+			<var name="Volume"	value="50"/>
 		</section>
 		<section name="unitaudio">
 			<var name="afterburner" value="engine_5.wav"/>
