some nice config files some better missions

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -1,4 +1,38 @@
 <vegaconfig>
+<!-- Comment lines beggining with a # are used by vssetup
+
+This line sets up what groups will appear in the menu. To add a group, just insert it into the line
+#groups Computer Video Sound Experiment
+
+These are the choices for each group. Again, to add a setting for a group, just insert it into a line
+When creating a new group, you need only add a new line
+#cat Computer P200MHz P500MHz P800MHz
+#cat Video GeForce3 GeForce2 Voodoo TNT Software
+#cat Sound audio_on_windows audio_on_linux audio_off audio_3d_windows audio_3d_linux
+#cat Experiment stable windows_safe linux_safe
+
+
+These line set the currently used settings. This allows them to show up as selected (currently enclosed in [])
+#set Video TNT
+#set Sound audio_3d_windows
+#set Computer P200MHz
+#set Experiment linux_safe
+
+A description for the catagories. This is text that appears in the menu
+#desc audio_on_linux Sound On
+#desc audio_on_windows Sound On
+#desc audio_off No Sound
+#desc audio_3d_linux 3D Sound
+#desc audio_3d_windows 3D Sound
+
+#endheader
+
+Setup will now stop looking header options. This line isn't required, but it will stop
+the program from trying to look through the whole file for something we know isn't there
+
+Farther down, you will see "#Software". Currently, it's line 213. You'll find more comments there
+-->
+
         <bindings>
 		<bind key="S" modifier="none" command="Cockpit::SkipMusicTrack" />
  		<bind key="space" modifier="none" command="FireKey" />
@@ -8,6 +42,10 @@
  		<bind key="c" modifier="none" command="CloakKey" />
  		<bind key="return" modifier="none" command="MissileKey" />
 		<bind key="g" modifier="none" command="WeapSelKey"/>
+		<bind key=":" modifier="none" command="Respawn"/>
+		<bind key="[" modifier="none" command="SwitchControl"/>
+		<bind key="?" modifier="none" command="TurretControl"/>
+
 		<bind key="m" modifier="none" command="MisSelKey"/>
 		<bind key="t" modifier="none" command="TargetKey" />
 		<bind key="p" modifier="none" command="PickTargetKey" />
@@ -171,7 +209,7 @@
 			<var name="sharedsounds" value="sounds"/>
 		</section>
 		<section name="terrain">
-			<var name="mass" value="100.0000001"/>
+			<var name="mass" value="1000.0000001"/>
 			<var name="radius" value="0000"/>
 			<var name="xscale" value="1"/>
 			<var name="yscale" value="1"/>
@@ -182,41 +220,164 @@
         	<section name="graphics/mesh">
 		</section>
         	<section name="graphics">
+			<section name="mesh">
+				<var name="testvar" value="-4"/>
+			</section>
 			<var name="jumpgatesize" value="17.5"/>
 			<var name="jumpgate" value="warp.ani"/>
-
 			<var name="LogoOffset" value="-4"/>
-			<var name="fog" value="false"/>
 			<var name="fogdetail" value="2"/>
 			<var name="LogoOffsetScale" value="-30.8"/>
 			<var name="HaloOffset" value=".5"/>
-			<var name="OptimizeVertexArrays" value="false"/>
-			<var name="OptimizeVertexCondition" value="1.0"/>
-			<var name="LockVertexArrays" value="true"/>
-			<var name="SharedVertexArrays" value="true"/>
 			<var name="MouseCursor" value="false"/>
+			<var name="OptimizeVertexCondition" value="1"/>
+			<var name="SharedVertexArrays" value="true"/>
+
+<!-- #windows_safe
+			<var name="LockVertexArrays" value="true"/>
+			<var name="OptimizeVertexArrays" value="true"/>
+			<var name="displaylists" value="false"/>
+			<var name="fullscreen" value="true"/>
+#end -->
+<!-- #linux_safe -->
+			<var name="OptimizeVertexArrays" value="false"/>
+			<var name="displaylists" value="true"/>
+			<var name="OptimizeVertexArrays" value="true"/>
+<!-- #end -->
+<!-- #stable
+			<var name="OptimizeVertexArrays" value="false"/>
+			<var name="displaylists" value="false"/>
+			<var name="LockVertexArrays" value="false"/>
+#end -->
+<!--
+This line starts a Software setting block. Everything betweeen #Software and #end will be
+Commented if the setting is disabled, and uncommented when the setting is enabled
+Any setting blocks not configured in the header (such as software instead of Software) will be ignored
+The default setting has this on
+You can also specify more than 1 setting for the block. If you do
+"#Software Voodoo", than either one of these will enable the block
+This is done many times later in this config file
+-->
+<!-- #Software
+			<var name="fog" value="false"/>
+			<var name="ModelDetail" value=".3"/>
+			<var name="x_resolution" value="512"/>
+			<var name="y_resolution" value="384"/>
+			<var name="mipmapdetail" value="0"/>
+			<var name="reflection" value="false"/>
+			<var name="ForceLighting" value="0"/>			
+#end -->
+<!-- #Voodoo
+			<var name="fog" value="false"/>
+			<var name="ModelDetail" value=".4"/>
+			<var name="x_resolution" value="640"/>
+			<var name="y_resolution" value="480"/>
+			<var name="mipmapdetail" value="1"/>
+			<var name="reflection" value="true"/>
+			<var name="ForceLighting" value="0"/>			
+#end -->
+<!-- #TNT -->
+			<var name="fog" value="false"/>
 			<var name="ModelDetail" value="1"/>
 			<var name="x_resolution" value="800"/>
 			<var name="y_resolution" value="600"/>
-			<var name="mipmapdetail" value="3"/>
+			<var name="mipmapdetail" value="2"/>
+			<var name="reflection" value="false"/>
+<!-- #end -->
+
+<!-- #P800MHz
 			<var name="ForceLighting" value="1"/>
+#end -->
+
+<!-- #GeForce2
+			<var name="fog" value="true"/>
+			<var name="ModelDetail" value="1"/>
+			<var name="x_resolution" value="1024"/>
+			<var name="y_resolution" value="768"/>
+			<var name="mipmapdetail" value="2"/>
 			<var name="reflection" value="true"/>
-			<var name="fullscreen" value="false"/>
+#end -->
+<!-- #GeForce3
+			<var name="fog" value="true"/>
+			<var name="ModelDetail" value="10"/>
+			<var name="x_resolution" value="1240"/>
+			<var name="y_resolution" value="1024"/>
+			<var name="mipmapdetail" value="3"/>
+			<var name="reflection" value="true"/>
+#end -->
+
+
+<!-- #Software Voodoo TNT GeForce2 -->
+			<var name="colordepth" value="16"/>
+        	       	<var name="zfar" value="60000"/>
+<!-- #end -->
+<!-- #GeForce3
 			<var name="colordepth" value="32"/>
-			<var name="displaylists" value="false"/>
+			<var name="zfar" value="600000"/>
+#end -->
+
                 	<var name="fov" value="60.0"/>
                 	<var name="aspect" value="1.3"/>
-                	<var name="znear" value="1.0"/>
-                	<var name="zfar" value="1000000"/>
+                	<var name="znear" value="4.0"/>
+
 			<var name="use_wireframe" value="0"/>
+<!-- #Software Voodoo GeForce2
+			<var name="starblend" value="false"/>
+#end -->
+<!-- #TNT GeForce3 -->
 			<var name="starblend" value="true"/>
+<!-- #end -->
+
+<!-- #Software
+			<var name="background" value="false"/>
+#end -->
+<!-- #Voodoo TNT GeForce2 GeForce3 -->
 			<var name="background" value="true"/>
+<!-- #end -->
+<!-- #Software Voodoo TNT GeForce2 -->
+			<var name="cockpit" value="false"/>
+<!-- #end -->
+<!-- #GeForce3
 			<var name="cockpit" value="true"/>
-			<var name="planet_detail" value="64"/>
+#end -->
+
+<!-- #Software Voodoo
+			<var name="planet_detail" value="16"/>
+			<var name="jump_detail" value="8"/>
+#end -->
+<!-- #TNT GeForce2 -->
+			<var name="planet_detail" value="20"/>
+			<var name="jump_detail" value="16"/>
+<!-- #end -->
+<!-- #GeForce3
+			<var name="planet_detail" value="32"/>
+			<var name="jump_detail" value="16"/>
+#end -->
+
+<!-- #Software
+			<var name="lightcutoff" value="0.16"/>
+			<var name="lightoptimalintensity" value="0.16"/>
+#end -->
+<!-- #Voodoo GeForce2
 			<var name="lightcutoff" value="0.06"/>
 			<var name="lightoptimalintensity" value="0.06"/>
+#end -->
+<!-- #TNT -->
+			<var name="lightcutoff" value="0.06"/>
+			<var name="lightoptimalintensity" value="0.08"/>
+<!-- #end -->
+<!-- #GeForce3
+			<var name="lightcutoff" value="0.04"/>
+			<var name="lightoptimalintensity" value="0.06"/>
+#end -->
+
 			<var name="lightsaturation" value="0.95"/>
+<!-- #Software Voodoo GeForce2
+			<var name="separatespecularcolor" value="false"/>
+#end -->
+<!-- #TNT GeForce3 -->
 			<var name="separatespecularcolor" value="true"/>
+<!-- #end -->
 			<var name="numlights"	value="4"/>
 			<section name="hud" >
 				<var name="drawAllTargetBoxes" value="false" />
@@ -229,21 +390,47 @@
 			</section>
 		</section>
 		<section name="audio">
+<!-- #audio_3d_windows audio_3d_linux -->
 			<var name="Positional" value="true"/>
+<!-- #end -->
+<!-- #auio_on_windows audio_on_linux audio_off
+			<var name="Positional" value="false"/>
+#end -->
 			<var name="Doppler" value="false"/>
-			<var name="DopplerScale" value=".1"/>
-
+			<var name="DooplerScale" value=".1"/>
+<!-- #P200MHz -->
+			<var name="MaxSingleSounds" value="3"/>
+			<var name="MaxTotalSounds" value="30"/>
+<!-- #end -->
+<!-- #P500MHz
+			<var name="MaxSingleSounds" value="3"/>
+			<var name="MaxTotalSounds" value="5"/>
+#end -->
+<!-- #P800MHz
+			<var name="MaxSingleSounds" value="3"/>
+			<var name="MaxTotalSounds" value="6"/>
+#end -->
+<!-- #P800MHz
 			<var name="MaxSingleSounds" value="8"/>
 			<var name="MaxTotalSounds" value="24"/>
+#end -->
 			<var name="frequency" value="22050"/>
+<!-- #audio_on_windows audio_on_linux audio_3d_windows audio_3d_linux -->
 			<var name="Sound" value="true"/>
-			<var name="Music" value="false"/>
+<!-- #end -->
+<!-- #audio_off
+			<var name="Sound" value="false"/>
+#end -->
 			<var name="battleplaylist" value="battle.m3u"/>
 			<var name="peaceplaylist" value="peace.m3u"/>
 			<var name="panicplaylist" value="panic.m3u"/>
 			<var name="threadtime" value="2000"/>	
-
-			<var name="Volume"	value="50"/>
+<!-- #audio_on_linux audio_3d_linux
+			<var name="Volume"	value="1"/>
+#end -->
+<!-- #audio_on_windows audio_3d_windows -->
+			<var name="Volume"	value="70"/>
+<!-- #end -->
 		</section>
 		<section name="unitaudio">
 			<var name="afterburner" value="engine_5.wav"/>
@@ -251,19 +438,37 @@
 			<var name="shield" value="shieldhit2.wav"/>
 			<var name="armor" value="armorhit.wav"/>
 			<var name="hull" value="armorhit.wav"/>
-			<var name="explode" value="explosion2.wav"/>
+			<var name="explode" value="explosion.wav"/>
 		</section>
 		<section name="joystick">
-			<var name="deadband"	value="0.05"/>
-			<var name="debug_digital_hatswitch"  value="false"/>
+			<var name="deadband" value="0.05"/>
+			<var name="debug_digital_hatswitch" value="false"/>
 		</section>
 		<section name="general">
-			<var name="simulation_atom" value="0.076"/>
-			<var name="default_mission" value="test2.mission"/>
+			<var name="default_mission" value="mission/explore_universe2.mission"/>
 			<var name="galaxy" value="milky_way.xml"/>
+			<var name="yaw" value="0"/>			<var name="pitch" value="0"/>			<var name="roll" value="0"/>
+
+<!-- #P200MHz -->
+			<var name="simulation_atom" value="0.12"/>
+			<var name="numoldsystems" value="4"/>
+<!-- #end -->
+<!-- #P500MHz
+			<var name="simulation_atom" value="0.09"/>
+			<var name="numoldsystems" value="8"/>
+#end -->
+<!-- #P800MHz
+			<var name="simulation_atom" value="0.06"/>
+			<var name="numoldsystems" value="20"/>
+#end -->
 			<var name="garbagecollectfrequency" value="20"/>
-			<var name="numoldsystems" value="6"/>
+<!-- #windows_safe linux_safe -->
 			<var name="deleteoldsystems" value="true"/>
+<!-- #end -->
+<!-- #stable
+			<var name="deleteoldsystems" value="false"/>
+#end -->
+
 
         	</section>
 		<section name="AI">
@@ -277,13 +482,26 @@
 		</section>
 		<section name="physics">
 			<!-- the next variable tells what percentage
-			      of normal the shields recharge in a nebule.  
+			      of normal the shields recharge in a nebule.
 			      Zero means shields do not work in nebulae -->
 			<var name="nebula_shield_recharge" value=".5"/>
 			<!-- the next variable tells how accurately systems shoudl be simulated where the player isn't in.   Really you don't need much accuracy -->
+			<var name="AsteroidDifficulty" value=".6"/>
+			<var name="autodist" value="1600"/>
 			<var name="YearScale" value="10"/>
-			<var name="NumRunningSystems" value="1"/>
-			<var name="InactiveSystemTime" value=".3"/>
+<!-- #P200MHz -->
+			<var name="NumRunningSystems" value="3"/>
+			<var name="InactiveSystemTime" value=".8"/>
+<!-- #end -->
+<!-- #P500MHz
+			<var name="NumRunningSystems" value="4"/>
+			<var name="InactiveSystemTime" value=".6"/>
+#end -->
+<!-- #P800MHz
+			<var name="NumRunningSystems" value="8"/>
+			<var name="InactiveSystemTime" value=".9"/>
+#end -->
+
 			<var name="AfterburnerFuelUsage" value="10"/>
 			<var name="NoFuelThrust" value=".9"/>
 			<var name="NoFuelAfterburn" value=".1"/>
@@ -291,7 +509,7 @@
 		</section>
 		<section name="interpreter">
 			<var name="debuglevel" value="0"/>
-			<var name="startgame"  value="true"/>
+			<var name="startgame" value="true"/>
 		</section>
 		<section name="player">
 			<var name="realname" 	value="insert-name-here"/>
