--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -42,9 +42,9 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
  		<bind key="c" modifier="none" command="CloakKey" />
  		<bind key="return" modifier="none" command="MissileKey" />
 		<bind key="g" modifier="none" command="WeapSelKey"/>
-		<bind key=":" modifier="none" command="Respawn"/>
+		<bind key=";" modifier="none" command="Respawn"/>
 		<bind key="[" modifier="none" command="SwitchControl"/>
-		<bind key="?" modifier="none" command="TurretControl"/>
+		<bind key="]" modifier="none" command="TurretControl"/>
 
 		<bind key="m" modifier="none" command="MisSelKey"/>
 		<bind key="t" modifier="none" command="TargetKey" />
