--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -2,28 +2,33 @@
 <!-- Comment lines beggining with a # are used by vssetup
 
 This line sets up what groups will appear in the menu. To add a group, just insert it into the line
-#groups Computer Video Sound Experiment
+#groups Computer Video Sound Difficulty Experiment
 
 These are the choices for each group. Again, to add a setting for a group, just insert it into a line
 When creating a new group, you need only add a new line
 #cat Computer P200MHz P500MHz P800MHz
 #cat Video GeForce3 GeForce2 Voodoo TNT Software
 #cat Sound audio_on_windows audio_on_linux audio_off audio_3d_windows audio_3d_linux
+#cat Difficulty easy medium hard
 #cat Experiment stable windows_safe linux_safe
 
 
 These line set the currently used settings. This allows them to show up as selected (currently enclosed in [])
-#set Video TNT
+#set Video GeForce2
 #set Sound audio_3d_windows
-#set Computer P200MHz
-#set Experiment linux_safe
-
+#set Computer P500MHz
+#set Difficulty medium
+#set Experiment stable
 A description for the catagories. This is text that appears in the menu
-#desc audio_on_linux Sound On
-#desc audio_on_windows Sound On
+#desc easy Dont Hurt Me
+#desc medium Can't Shake This Runt
+#desc hard Mommy!
+#desc audio_on_linux Sound On Linux
+#desc audio_on_windows Sound On Windows
 #desc audio_off No Sound
-#desc audio_3d_linux 3D Sound
-#desc audio_3d_windows 3D Sound
+#desc audio_3d_linux 3D Sound Linux
+#desc audio_3d_windows 3D Sound Windows
+
 
 #endheader
 
@@ -209,7 +214,17 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
 			<var name="sharedsounds" value="sounds"/>
 		</section>
 		<section name="terrain">
+<!-- #easy
+			<var name="mass" value="10.0000001"/>
+#end -->
+<!-- #medium -->
+			<var name="mass" value="100.0000001"/>
+<!-- #end -->
+
+<!-- #hard
 			<var name="mass" value="1000.0000001"/>
+#end -->
+
 			<var name="radius" value="0000"/>
 			<var name="xscale" value="1"/>
 			<var name="yscale" value="1"/>
@@ -239,16 +254,16 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
 			<var name="displaylists" value="false"/>
 			<var name="fullscreen" value="true"/>
 #end -->
-<!-- #linux_safe -->
+<!-- #linux_safe
 			<var name="OptimizeVertexArrays" value="false"/>
 			<var name="displaylists" value="true"/>
 			<var name="OptimizeVertexArrays" value="true"/>
-<!-- #end -->
-<!-- #stable
+#end -->
+<!-- #stable -->
 			<var name="OptimizeVertexArrays" value="false"/>
 			<var name="displaylists" value="false"/>
 			<var name="LockVertexArrays" value="false"/>
-#end -->
+<!-- #end -->
 <!--
 This line starts a Software setting block. Everything betweeen #Software and #end will be
 Commented if the setting is disabled, and uncommented when the setting is enabled
@@ -276,27 +291,29 @@ This is done many times later in this config file
 			<var name="reflection" value="true"/>
 			<var name="ForceLighting" value="0"/>			
 #end -->
-<!-- #TNT -->
+<!-- #P800MHz
+			<var name="ForceLighting" value="1"/>
+#end -->
+<!-- #TNT
 			<var name="fog" value="false"/>
 			<var name="ModelDetail" value="1"/>
 			<var name="x_resolution" value="800"/>
 			<var name="y_resolution" value="600"/>
 			<var name="mipmapdetail" value="2"/>
 			<var name="reflection" value="false"/>
-<!-- #end -->
-
-<!-- #P800MHz
-			<var name="ForceLighting" value="1"/>
+			<var name="ForceLighting" value="0"/>
 #end -->
 
-<!-- #GeForce2
+
+
+<!-- #GeForce2 -->
 			<var name="fog" value="true"/>
 			<var name="ModelDetail" value="1"/>
 			<var name="x_resolution" value="1024"/>
 			<var name="y_resolution" value="768"/>
 			<var name="mipmapdetail" value="2"/>
 			<var name="reflection" value="true"/>
-#end -->
+<!-- #end -->
 <!-- #GeForce3
 			<var name="fog" value="true"/>
 			<var name="ModelDetail" value="10"/>
@@ -321,12 +338,12 @@ This is done many times later in this config file
                 	<var name="znear" value="4.0"/>
 
 			<var name="use_wireframe" value="0"/>
-<!-- #Software Voodoo GeForce2
+<!-- #Software Voodoo GeForce2 -->
 			<var name="starblend" value="false"/>
-#end -->
-<!-- #TNT GeForce3 -->
-			<var name="starblend" value="true"/>
 <!-- #end -->
+<!-- #TNT GeForce3
+			<var name="starblend" value="true"/>
+#end -->
 
 <!-- #Software
 			<var name="background" value="false"/>
@@ -358,26 +375,26 @@ This is done many times later in this config file
 			<var name="lightcutoff" value="0.16"/>
 			<var name="lightoptimalintensity" value="0.16"/>
 #end -->
-<!-- #Voodoo GeForce2
+<!-- #Voodoo GeForce2 -->
 			<var name="lightcutoff" value="0.06"/>
 			<var name="lightoptimalintensity" value="0.06"/>
-#end -->
-<!-- #TNT -->
+<!-- #end -->
+<!-- #TNT
 			<var name="lightcutoff" value="0.06"/>
 			<var name="lightoptimalintensity" value="0.08"/>
-<!-- #end -->
+#end -->
 <!-- #GeForce3
 			<var name="lightcutoff" value="0.04"/>
 			<var name="lightoptimalintensity" value="0.06"/>
 #end -->
 
 			<var name="lightsaturation" value="0.95"/>
-<!-- #Software Voodoo GeForce2
+<!-- #Software Voodoo GeForce2 -->
 			<var name="separatespecularcolor" value="false"/>
-#end -->
-<!-- #TNT GeForce3 -->
-			<var name="separatespecularcolor" value="true"/>
 <!-- #end -->
+<!-- #TNT GeForce3
+			<var name="separatespecularcolor" value="true"/>
+#end -->
 			<var name="numlights"	value="4"/>
 			<section name="hud" >
 				<var name="drawAllTargetBoxes" value="false" />
@@ -398,14 +415,14 @@ This is done many times later in this config file
 #end -->
 			<var name="Doppler" value="false"/>
 			<var name="DooplerScale" value=".1"/>
-<!-- #P200MHz -->
+<!-- #P200MHz
 			<var name="MaxSingleSounds" value="3"/>
 			<var name="MaxTotalSounds" value="30"/>
-<!-- #end -->
-<!-- #P500MHz
+#end -->
+<!-- #P500MHz -->
 			<var name="MaxSingleSounds" value="3"/>
 			<var name="MaxTotalSounds" value="5"/>
-#end -->
+<!-- #end -->
 <!-- #P800MHz
 			<var name="MaxSingleSounds" value="3"/>
 			<var name="MaxTotalSounds" value="6"/>
@@ -449,25 +466,25 @@ This is done many times later in this config file
 			<var name="galaxy" value="milky_way.xml"/>
 			<var name="yaw" value="0"/>			<var name="pitch" value="0"/>			<var name="roll" value="0"/>
 
-<!-- #P200MHz -->
+<!-- #P200MHz
 			<var name="simulation_atom" value="0.12"/>
 			<var name="numoldsystems" value="4"/>
-<!-- #end -->
-<!-- #P500MHz
+#end -->
+<!-- #P500MHz -->
 			<var name="simulation_atom" value="0.09"/>
 			<var name="numoldsystems" value="8"/>
-#end -->
+<!-- #end -->
 <!-- #P800MHz
 			<var name="simulation_atom" value="0.06"/>
 			<var name="numoldsystems" value="20"/>
 #end -->
 			<var name="garbagecollectfrequency" value="20"/>
-<!-- #windows_safe linux_safe -->
+<!-- #windows_safe linux_safe
 			<var name="deleteoldsystems" value="true"/>
-<!-- #end -->
-<!-- #stable
-			<var name="deleteoldsystems" value="false"/>
 #end -->
+<!-- #stable -->
+			<var name="deleteoldsystems" value="false"/>
+<!-- #end -->
 
 
         	</section>
@@ -484,27 +501,46 @@ This is done many times later in this config file
 			<!-- the next variable tells what percentage
 			      of normal the shields recharge in a nebule.
 			      Zero means shields do not work in nebulae -->
-			<var name="nebula_shield_recharge" value=".5"/>
 			<!-- the next variable tells how accurately systems shoudl be simulated where the player isn't in.   Really you don't need much accuracy -->
-			<var name="AsteroidDifficulty" value=".6"/>
-			<var name="autodist" value="200"/>
-			<var name="YearScale" value="10"/>
-<!-- #P200MHz -->
+<!-- #P200MHz
 			<var name="NumRunningSystems" value="3"/>
 			<var name="InactiveSystemTime" value=".8"/>
-<!-- #end -->
-<!-- #P500MHz
+#end -->
+<!-- #P500MHz -->
 			<var name="NumRunningSystems" value="4"/>
 			<var name="InactiveSystemTime" value=".6"/>
-#end -->
+<!-- #end -->
 <!-- #P800MHz
 			<var name="NumRunningSystems" value="8"/>
 			<var name="InactiveSystemTime" value=".9"/>
 #end -->
-
-			<var name="AfterburnerFuelUsage" value="10"/>
-			<var name="NoFuelThrust" value=".9"/>
+<!-- #easy
+			<var name="autodist" value="200"/>
+			<var name="YearScale" value="10"/>
+			<var name="AsteroidDifficulty" value=".2"/>
+			<var name="AfterburnerFuelUsage" value="1"/>
+			<var name="NoFuelThrust" value="1"/>
 			<var name="NoFuelAfterburn" value=".1"/>
+			<var name="nebula_shield_recharge" value=".5"/>
+#end -->
+<!-- #medium -->
+			<var name="nebula_shield_recharge" value=".25"/>
+			<var name="autodist" value="500"/>
+			<var name="YearScale" value="1"/>
+			<var name="AsteroidDifficulty" value=".6"/>
+			<var name="AfterburnerFuelUsage" value="10"/>
+			<var name="NoFuelThrust" value="1"/>
+			<var name="NoFuelAfterburn" value=".1"/>
+<!-- #end -->
+<!-- #hard
+			<var name="nebula_shield_recharge" value="0"/>
+			<var name="autodist" value="2500"/>
+			<var name="YearScale" value=".2"/>
+			<var name="AsteroidDifficulty" value="1"/>
+			<var name="AfterburnerFuelUsage" value="40"/>
+			<var name="NoFuelThrust" value=".5"/>
+			<var name="NoFuelAfterburn" value="0"/>
+#end -->
 			<var name="Drone" value="unknown_active"/>
 		</section>
 		<section name="interpreter">
