--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -263,6 +263,7 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
 			<var name="OptimizeVertexArrays" value="false"/>
 			<var name="displaylists" value="false"/>
 			<var name="LockVertexArrays" value="false"/>
+			<var name="fullscreen" value="true"/>
 <!-- #end -->
 <!--
 This line starts a Software setting block. Everything betweeen #Software and #end will be
