--- a/vegastrike.config
+++ b/vegastrike.config
@@ -50,6 +50,9 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
 		<bind key=";" modifier="none" command="Respawn"/>
 		<bind key="[" modifier="none" command="SwitchControl"/>
 		<bind key="]" modifier="none" command="TurretControl"/>
+		<bind key="d" modifier="none" command="DockKey"/>
+		<bind key="u" modifier="none" command="UnDockKey"/>
+		<bind key="C" modifier="none" command="RequestClearenceKey"/>
 
 		<bind key="m" modifier="none" command="MisSelKey"/>
 		<bind key="t" modifier="none" command="TargetKey" />
@@ -104,7 +107,7 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
                 <bind key="q" modifier="none" command="Cockpit::PitchDown"/>
                 <bind key="z" modifier="none" command="Cockpit::PitchUp"/>
                 <bind key="a" modifier="none" command="Cockpit::YawLeft"/>
-                <bind key="d" modifier="none" command="Cockpit::YawRight"/>
+                <bind key="s" modifier="none" command="Cockpit::YawRight"/>
                 <bind key="cursor-pagedown" modifier="none" command="Cockpit::ScrollDown"/>
                 <bind key="cursor-pageup" modifier="none" command="Cockpit::ScrollUp"/>
 
