added rezero velocity keys...

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -110,6 +110,8 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
                 <bind key="s" modifier="none" command="Cockpit::YawRight"/>
                 <bind key="cursor-pagedown" modifier="none" command="Cockpit::ScrollDown"/>
                 <bind key="cursor-pageup" modifier="none" command="Cockpit::ScrollUp"/>
+                <bind key="cursor-home" modifier="none" command="SetVelocityRefKey"/>
+                <bind key="cursor-end" modifier="none" command="SetVelocityNullKey"/>
 
                 <bind key="esc" modifier="none" command="Cockpit::Quit"/>
 
