docu: terrain,docking   patched in_sdl.cpp for second joystick
2002-02-24 Alexander Rawass <alexannika@users.sourceforge.net>

	* updated docu
	  - added TODO lines
	  - Terrain section
	  - Docking section
	* imported data/mission/devel/visit_from the aera
	  and data/visit_from_the_aera
	* patched src/in_sdl.cpp, for joy buttons to work with
	  a second joystick
	  thanks to Martin Scherer <marsch84@web.de> for his patch

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -60,9 +60,9 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
 		<bind key="n" modifier="none" command="NearestTargetKey" />
 		<bind key="h" modifier="none" command="ThreatTargetKey" />
 		<bind key="T" modifier="none" command="TurretTargetKey" />
-		<bind key="P" modifier="none" command="PickTurretTargetKey" />
-		<bind key="N" modifier="none" command="NearestTurretTargetKey" />
-		<bind key="H" modifier="none" command="ThreatTurretTargetKey" />
+		<bind key="P" modifier="none" command="TurretPickTargetKey" />
+		<bind key="N" modifier="none" command="TurretNearestTargetKey" />
+		<bind key="H" modifier="none" command="TurretThreatTargetKey" />
                 <bind key="`" modifier="none" command="SheltonKey" />
                 <bind key="-" modifier="none" command="DecelKey"/>
                 <bind key="+" modifier="none" command="AccelKey" />
