--- a/vegastrike.config
+++ b/vegastrike.config
@@ -268,7 +268,7 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
 			<var name="OptimizeVertexArrays" value="false"/>
 			<var name="displaylists" value="false"/>
 			<var name="LockVertexArrays" value="false"/>
-			<var name="fullscreen" value="true"/>
+			<var name="fullscreen" value="false"/>
 <!-- #end -->
 <!--
 This line starts a Software setting block. Everything betweeen #Software and #end will be
@@ -504,6 +504,7 @@ This is done many times later in this config file
 			</section>
 		</section>
 		<section name="physics">
+			<var name="atompshereheight" value="1"/>
 			<!-- the next variable tells what percentage
 			      of normal the shields recharge in a nebule.
 			      Zero means shields do not work in nebulae -->
