modified some minor stuff

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -220,7 +220,7 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
 		</section>
 		<section name="terrain">
 <!-- #easy
-			<var name="mass" value="10.0000001"/>
+			<var name="mass" value=".4000001"/>
 #end -->
 <!-- #medium -->
 			<var name="mass" value="100.0000001"/>
