fixed up vsconfig

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -248,6 +248,11 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
 			<var name="font_point" value="16"/>
 	
 			<var name="high_quality_sprites" value="true"/>
+
+			<var name="star_body_radius" value=".4"/>
+			<var name="star_glow_radius" value="1.2"/>
+			<var name="draw_star_body" value="true"/>
+			<var name="draw_star_glow" value="true"/>
 			<var name="jumpgatesize" value="17.5"/>
 			<var name="jumpgate" value="warp.ani"/>
 			<var name="LogoOffset" value="-4"/>
